Adjusted header layout to display name next to avatar

--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
     <!-- Header contains the navigation and the main title -->
     <header>
         <div class="header-content">
-            <img src="./assets/images/avatar.webp" alt="Avatar" class="header-photo"> <!-- Image for the header photo -->
-            <div class="title-nav">
+            <div class="avatar-name-container">
+                <img src="./assets/images/avatar.webp" alt="Avatar" class="header-photo">
                 <div class="name-container">
-                    <h1>Santiago Weinstein</h1> <!-- Main title -->
-                    <h2 class="title">Software Engineer</h2> <!-- Subtitle -->
+                    <h1>Santiago Weinstein</h1>
+                    <h2 class="title">Software Engineer</h2>
                 </div>
-                <nav>
-                    <ul>
-                        <li><a href="#about">About Me</a></li> <!-- Navigation links -->
-                        <li><a href="#work">Work</a></li>
-                        <li><a href="#contact">Contact Me</a></li>
-                        <li><a href="resume.pdf" target="_blank">Resume</a></li>
-                    </ul>
-                </nav>
             </div>
+            <nav>
+                <ul>
+                    <li><a href="#about"><span class="nav-highlight">About Me</span></a></li>
+                    <li><a href="#work"><span class="nav-highlight">Work</span></a></li>
+                    <li><a href="#contact"><span class="nav-highlight">Contact Me</span></a></li>
+                    <li><a href="resume.pdf" target="_blank"><span class="nav-highlight">Resume</span></a></li>
+                </ul>
+            </nav>
         </div>
     </header>
+    
     
     <!-- Main content area for about, work, and contact sections -->
     <main>
