--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
     <!-- Main content area for about, work, and contact sections -->
     <main>
         <!-- About section with a brief introduction -->
-        <section id="about">
+        <section id="about" class="about-me container">
             <h2>About Me</h2>
             <p>I'm a dedicated software developer with a passion for technology and innovation. Specializing in web development and eager to contribute to meaningful projects.</p>
         </section>
         
         <!-- Work section to showcase projects -->
-        <section id="work">
+        <section id="work" class="work container">
             <h2>Work</h2>
             <!-- Placeholder for projects -->
         </section>
         
         <!-- Contact section for communication -->
-        <section id="contact">
+        <section id="contact" class="contact container">
             <h2>Contact Me</h2>
             <!-- Placeholder for contact information -->
         </section>
