added first work link

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
         </section>
         
         <!-- Work section to showcase projects -->
-        <section id="work">
+        <section id="work" class="work container">
             <h2>Work</h2>
             <div class="projects-container">
                 <!-- Project 1 -->
                 <div class="project-card">
-                    <img src="path-to-image-of-project-1" alt="Project 1" />
+                    <img src="./assets/images/Captura de pantalla 2024-02-10 a la(s) 05.49.07.png" alt="Project 1" />
                     <div class="project-info">
                         <h3>MiniProyect</h3>
                         <p>BenguSurfing</p>
-                        <a href="link-to-project-1" class="project1-link">View Project</a>
+                        <a href="https://stgowf.github.io/mini1/" class="project1-link">View Project</a>
                     </div>
                 </div>
                 <!-- Repeat for other projects -->
