--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
                 <!-- Repeat for other projects -->
             </div>
         </section>
+        <section id="contact" class="contact-me container">
+            <h2>Contact Me</h2>
+            <p><!-- Your contact information here --></p>
+        </section>
+    </main>
+    <footer>
+        <p>Cool subtitle here!</p>
+    </footer>
+</body>
+</html>
     </main>
     
     <!-- Aside for additional information or links -->
