added proyects, images and contact info to the index

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <!-- About section with a brief introduction -->
         <section id="about" class="about-me container">
-            <h2>About Me</h2>
+            <h2>About <span>Me</span></h2>
             <p>I'm a dedicated software developer with a passion for technology and innovation. Specializing in web development and eager to contribute to meaningful projects.</p>
         </section>
         
@@ -45,19 +45,47 @@
             <div class="projects-container">
                 <!-- Project 1 -->
                 <div class="project-card">
-                    <img src="./assets/images/Captura de pantalla 2024-02-10 a la(s) 05.49.07.png" alt="Project 1" />
+                    <img src="./assets/images/Proyect1.png" alt="Project 1" />
                     <div class="project-info">
-                        <h3>MiniProyect</h3>
-                        <p>BenguSurfing</p>
-                        <a href="https://stgowf.github.io/mini1/" class="project1-link">View Project</a>
+                        <h3>MiniProject</h3>
+                        <p>HTML, CSS</p>
+                        <a href="https://stgowf.github.io/mini1/" class="project-link">View Project</a>
                     </div>
                 </div>
-                <!-- Repeat for other projects -->
+                <!-- Project 2 -->
+                <div class="project-card">
+                    <img src="./assets/images/Proyect2.png" alt="Project 2" />
+                    <div class="project-info">
+                        <h3>Prework Studu Guide</h3>
+                        <p>HTML, CSS, JavaScript</p>
+                        <a href="https://stgowf.github.io/prework-study-guide/" class="project-link">View Project</a>
+                    </div>
+                </div>
+                <!-- Project 3 -->
+                <div class="project-card">
+                    <img src="./assets/images/project3.png" alt="Project 3" />
+                    <div class="project-info">
+                        <h3>Third Project</h3>
+                        <p>Coming Soon</p>
+                        <a href="https://google.com/" class="project-link">View Project</a>
+                    </div>
+                </div>
+                <!-- Project 4 -->
+                <div class="project-card">
+                    <img src="./assets/images/project4.png" alt="Project 3" />
+                    <div class="project-info">
+                        <h3>Fourth Project</h3>
+                        <p>Coming Soon</p>
+                        <a href="https://google.com/" class="project-link">View Project</a>
+                    </div>
+                </div>               
+                <!-- Add more projects as needed -->
             </div>
         </section>
         <section id="contact" class="contact-me container">
-            <h2>Contact Me</h2>
-            <p><!-- Your contact information here --></p>
+            <h2>Contact <span>Me</span></h2>
+            <p>Email: <a href="mailto:stgoweinsteinf@gmail.com">stgoweinsteinf@gmail.com</a></p>
+            <p>GitHub: <a href="https://github.com/StgoWF" target="_blank">StgoWF</a></p>
         </section>
     </main>
     <footer>
