--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- About section with a brief introduction -->
         <section id="about" class="about-me container">
             <h2>About <span>Me</span></h2>
-            <p>I'm a dedicated software developer with a passion for technology and innovation. Specializing in web development and eager to contribute to meaningful projects.</p>
+            <p>I'm a dedicated software developer and Civil Industrial Engineer with a passion for technology and innovation. Specializing in web development, I bring a strong analytical and optimization skillset to contribute to meaningful and challenging projects</p>
         </section>
         
         <!-- Work section to showcase projects -->
@@ -82,6 +82,7 @@
                 <!-- Add more projects as needed -->
             </div>
         </section>
+        
         <section id="contact" class="contact-me container">
             <h2>Contact <span>Me</span></h2>
             <p>Email: <a href="mailto:stgoweinsteinf@gmail.com">stgoweinsteinf@gmail.com</a></p>
@@ -89,7 +90,7 @@
         </section>
     </main>
     <footer>
-        <p>Cool subtitle here!</p>
+        <p>Innovative Solutions in Software and Systems.</p>
     </footer>
 </body>
 </html>
