--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                 </div>
                 <!-- Project 3 -->
                 <div class="project-card">
-                    <img src="./assets/images/project3.png" alt="Project 3" />
+                    <img src="./assets/images/TailorMyTrip.png" alt="Project 3" />
                     <div class="project-info">
-                        <h3>Third Project</h3>
-                        <p>Coming Soon</p>
-                        <a href="https://google.com/" class="project-link">View Project</a>
+                        <h3>TailorMyTrip</h3>
+                        <p>HTML, CSS, JavaScript</p>
+                        <a href="https://stgowf.github.io/TailorMyTrip/" class="project-link">View Project</a>
                     </div>
                 </div>
                 <!-- Project 4 -->
