--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                 </div>
                 <!-- Project 4 -->
                 <div class="project-card">
-                    <img src="./assets/images/project4.png" alt="Project 4" />
+                    <img src="./assets/images/Homepage.png" alt="Project 4" />
                     <div class="project-info">
-                        <h3>Fourth Project</h3>
-                        <p>Coming Soon</p>
-                        <a href="https://google.com/" class="project-link">View Project</a>
+                        <h3>FlightQuest</h3>
+                        <p>HTML, CSS, JavaScript, SQL</p>
+                        <a href="https://flightquest-e755c2dda8ba.herokuapp.com/" class="project-link">View Project</a>
                     </div>
                 </div>               
                 <!-- Add more projects as needed -->
